  - Support for single quotes (' to &#39;)

1.000000 - 2012-08-13
  - Initial release